@@ -5,12 +5,13 @@ KAUI_API_SECRET=36ABD422-4401-41D5-AF8D-20ADE79478C0
 
 set -ex
 sudo yum install -y mc telnet
-sudo yum install -y java-1.8.0-openjdk gcc ruby-devel
 sudo amazon-linux-extras install -y ruby2.6 tomcat8.5
-gem install io-console kpm
+sudo yum install -y java-1.8.0-openjdk gcc ruby-devel
+sudo gem update --system
+sudo gem install io-console kpm
 sudo mkdir -p /var/lib/killbill
 sudo chown -R ec2-user:ec2-user /var/lib/killbill
-cat > /var/lib/killbill/kpm.yml << "EOF"
+cat >/var/lib/killbill/kpm.yml <<"EOF"
 killbill:
   version: 0.22.10
   plugins:
@@ -28,9 +29,10 @@ kaui:
   plugins_dir: /var/lib/killbill # Used for sha1.yml
   webapp_path: /var/lib/tomcat/webapps/kaui/ROOT.war
 EOF
-kpm install /var/lib/killbill/kpm.yml
+sudo $(which kpm) install /var/lib/killbill/kpm.yml
+chown -R tomcat:tomcat /var/lib/tomcat/webapps
 
-sudo tee /var/lib/killbill/killbill.properties << "EOF"
+sudo tee /var/lib/killbill/killbill.properties <<"EOF"
 org.killbill.billing.osgi.bundles.jruby.conf.dir=/var/lib/killbill/config
 org.killbill.billing.osgi.dao.password=$DB_PASSWORD
 org.killbill.billing.osgi.dao.url=jdbc:mysql://killbill.cluster-cobdzpzyvu7i.us-east-1.rds.amazonaws.com:3306/killbill
@@ -47,15 +49,37 @@ org.killbill.billing.plugin.kpm.kpmPath=/usr/local/bin/kpm
 org.killbill.billing.plugin.kpm.bundlesPath=/var/lib/killbill/bundles
 EOF
 
-sudo tee /usr/share/tomcat/bin/setenv.sh << "EOF"
-export CATALINA_OPTS="$CATALINA_OPTS
+sudo tee /etc/tomcat/conf.d/killbill.conf <<"EOF"
+JAVA_HOME=${JAVA_HOME-"/usr/lib/jvm/jre-1.8.0"}
+CATALINA_OPTS="-server
+               -showversion
+               -XX:+PrintCommandLineFlags
+               -XX:+UseCodeCacheFlushing
+               -Xms512m
+               -Xmx1024m
+               -XX:+CMSClassUnloadingEnabled
+               -XX:-OmitStackTraceInFastThrow
+               -XX:+UseParNewGC
+               -XX:+UseConcMarkSweepGC
+               -XX:+CMSConcurrentMTEnabled
+               -XX:+ScavengeBeforeFullGC
+               -XX:+CMSScavengeBeforeRemark
+               -XX:+CMSParallelRemarkEnabled
+               -XX:+UseCMSInitiatingOccupancyOnly
+               -XX:CMSInitiatingOccupancyFraction=50
+               -XX:NewSize=100m
+               -XX:MaxNewSize=256m
+               -XX:SurvivorRatio=10
+               -XX:+DisableExplicitGC"
+CATALINA_OPTS="$CATALINA_OPTS
                       -Dkaui.api_key=clearflask
-                      -Dkaui.api_secret=KAUI_API_SECRET
+                      -Dkaui.api_secret=$KAUI_API_SECRET
                       -Dkaui.url=http://127.0.0.1:8081
                       -Dkaui.db.url=jdbc:mysql://killbill.cluster-cobdzpzyvu7i.us-east-1.rds.amazonaws.com:3306/killbill
                       -Dkaui.db.password=$DB_PASSWORD
                       -Dkaui.db.username=killbill
                       -Dkaui.root_username=admin
+                      -Dlogback.configurationFile=/var/lib/killbill/logback.xml
                       -Dorg.killbill.server.properties=file:///var/lib/killbill/killbill.properties
                       -Dcom.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize=true
                       -Djava.security.egd=file:/dev/./urandom
@@ -63,7 +87,7 @@ export CATALINA_OPTS="$CATALINA_OPTS
                       -Dlog4jdbc.sqltiming.error.threshold=1000"
 EOF
 
-sudo tee /etc/tomcat/server.xml << "EOF"
+sudo tee /etc/tomcat/server.xml <<"EOF"
 <?xml version='1.0' encoding='utf-8'?>
 <Server port="8005" shutdown="SHUTDOWN">
   <Listener className="org.apache.catalina.startup.VersionLoggerListener" />
@@ -91,9 +115,9 @@ sudo tee /etc/tomcat/server.xml << "EOF"
 
     <Engine name="Catalina" defaultHost="localhost">
       <Host name="localhost"
-            appBase="killbill"
+            appBase="webapps/killbill"
             unpackWARs="true"
-            autoDeploy="false">
+            autoDeploy="true">
 
         <Valve className="org.apache.catalina.valves.RemoteIpValve"
                protocolHeader="x-forwarded-proto"
@@ -119,9 +143,9 @@ sudo tee /etc/tomcat/server.xml << "EOF"
 
     <Engine name="Catalina" defaultHost="localhost">
       <Host name="localhost"
-            appBase="kaui"
+            appBase="webapps/kaui"
             unpackWARs="true"
-            autoDeploy="false">
+            autoDeploy="true">
 
         <Valve className="org.apache.catalina.valves.RemoteIpValve"
                protocolHeader="x-forwarded-proto"
@@ -132,43 +156,28 @@ sudo tee /etc/tomcat/server.xml << "EOF"
 </Server>
 EOF
 
+sudo tee /var/lib/killbill/logback.xml <<"EOF"
+<configuration scan="false">
+  <!-- <appender name="CLOUD" class="com.google.cloud.logging.logback.LoggingAppender">
+    <log>killbill.log</log>
+    <flushLevel>WARN</flushLevel>
+  </appender> -->
+  <appender name="STDOUT" class="ch.qos.logback.core.ConsoleAppender">
+    <encoder>
+      <pattern>%-4relative [%thread] %-5level %logger{35} - %msg %n</pattern>
+    </encoder>
+  </appender>
 
+  <!-- Silence verbose loggers -->
+  <logger name="com.dmurph" level="OFF"/>
+  <logger name="jdbc" level="OFF"/>
+  <logger name="org.jooq.Constants" level="OFF"/>
+  <logger name="org.eclipse" level="WARN"/>
+  <logger name="org.killbill.commons.jdbi.guice.DBIProvider" level="OFF"/>
 
-# Below are experimental
-gem install rails
-npm install
-#sudo amazon-linux-extras install -y tomcat8.5
-
-
-gem install rubygems-update
-update_rubygems
-sudo /usr/local/bin/update_rubygems
-gem update --system
-
-
-
-### and let's try again...
-
-
-### Let's start again
-
-sudo yum install -y mc telnet
-sudo yum install -y git
-sudo amazon-linux-extras install -y ansible2
-
-# https://github.com/killbill/killbill-cloud/tree/master/ansible
-mkdir -p ~/ansible
-cd ~/ansible
-cat > ansible.cfg << "EOF"
-[defaults]
-roles_path = ~/.ansible/roles/
-library = ~/.ansible/roles/killbill-cloud/ansible/library
+  <root level="INFO">
+    <!-- <appender-ref ref="CLOUD" /> -->
+    <appender-ref ref="STDOUT" />
+  </root>
+</configuration>
 EOF
-cat > requirements.yml << "EOF"
-- src: https://github.com/killbill/killbill-cloud
-EOF
-ansible-galaxy install -r requirements.yml
-
-sudo yum install -y java
-ansible-playbook killbill-cloud/ansible/roles/kpm
-
